--- a/package.json
+++ b/package.json
@@ -449,6 +449,7 @@
     "normalize-range": "^0.1.2",
     "normalize-url": "^6.1.0",
     "npm-run-path": "^4.0.1",
+    "npm-start":""
     "nth-check": "^2.1.1",
     "nwsapi": "^2.2.0",
     "object-assign": "^4.1.1",
